--- a/src/main/resources/static/css/categories.css
+++ b/src/main/resources/static/css/categories.css
@@ -33,11 +33,8 @@ body {
 header {
     background-color: #000000;
     color: #fff;
-    padding: 5px 10px;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
     align-items: center;
-    justify-content: flex-end;
 }
 
 button {
@@ -54,7 +51,7 @@ li {
     list-style-type: none;
 }
 
-li:hover {
+.side:hover {
     transform: scale(1.1);
 }
 
@@ -398,7 +395,17 @@ img {
 
 @media only screen and (max-width: 600px) {
     li {
-      display: block;
-      width: 100%;
+        display: block;
+        width: 100%;
     }
-  }
+}
+
+#sort-selector {
+    margin: 20px;
+    background-color: black;
+}
+
+.holder {
+    width: 1165px;
+    margin: auto;
+}
