--- a/src/main/resources/templates/brackish.html
+++ b/src/main/resources/templates/brackish.html
@@ -28,11 +28,11 @@
         </div>
         <ul class="pagination">
           <select id="sort-selector">
-            <option value="popularity">Most Popular</option>
+            <option value="default">Default</option>
             <option value="nameAsc">Name (A-Z)</option>
             <option value="nameDesc">Name (Z-A)</option>
-            <option value="priceAsc">Price (low to high)</option>
-            <option value="priceDesc">Price (high to low)</option>
+            <option value="priceAsc">Price (Low-High)</option>
+            <option value="priceDesc">Price (High-Low)</option>
           </select>
         </ul>
       </div>
