--- a/src/main/resources/templates/hybrid.html
+++ b/src/main/resources/templates/hybrid.html
@@ -14,12 +14,16 @@
 </head>
 
 <body>
+  <header>
+    <div class="holder">
+      <div th:replace="~{fragments/navbar :: navbar}"></div>
+    </div>
+  </header>
   <div class="breadcumb-wrapper">
     <h2 class="page-title">Categories</h2>
   </div>
   <div class="bg-main">
     <div class="container">
-      <div th:replace="~{fragments/navbar :: navbar}"></div>
       <div class="box">
         <div class="breadcumb">
           <a th:href="@{/}">Home</a>
@@ -70,7 +74,7 @@
     function formatPrice(x) {
       return x.toString().replace(/\B(?<!\.\d*)(?=(\d{3})+(?!\d))/g, ",");
     }
-    
+
     let product_list = document.querySelector('#products')
     renderProducts = (products) => {
       products.forEach(e => {
@@ -103,7 +107,7 @@
     sortSelector.addEventListener('change', () => {
       const value = sortSelector.value
       if (value === 'default') {
-        products.sort((a, b) => (a.id > b.id) ? 1 :  -1);
+        products.sort((a, b) => (a.id > b.id) ? 1 : -1);
       } else if (value === 'nameAsc') {
         products.sort((a, b) => a.name.localeCompare(b.name))
       } else if (value === 'nameDesc') {
